--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,11 @@ dependencies:
     sdk: flutter
   styled_widget: ^0.4.1
   pull_to_refresh: ^2.0.0
-  hive: ^2.2.3
   file_picker: ^6.1.1
   hive_generator: ^2.0.1
+  hive_flutter: ^1.1.0
+  flutter_pdfview: 1.3.2
+  syncfusion_flutter_pdfviewer: ^29.2.7
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
